--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button class="btn" value="/" onclick="adicionarOperador('+')">/</button>
       </div>
       <div class="iconBox">
-        <a href="https://github.com/AndersonDevFernandes"><img src="/icons8-github.svg" alt="github" class="icon"></a>
+        <a href="https://github.com/AndersonDevFernandes"><img src="icons8-github.svg" alt="github" class="icon"></a>
       </div>
     </div>
     
